# Zettelsortierung

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/interim/: Mitarbeiter.txt
data/processed/: Kreise.csv  Landschaften.csv  Orte.csv  Quellen.csv
data/raw/: KreiseOrte.html  Quellen.html
docs/: mkdocs.yml
docs/docs/: Landschaften-Kreise-Orte.md  Landschaften_Kreise_Orte.md  index.md
notebooks/: 01_KreiseOrte.ipynb  02_Quellen.ipynb  03_Try_Deepseek_OCR_2.ipynb  04_Text_Detection.ipynb  05_Combine_Detection_and_OCR.ipynb  06_Batch_Regions.ipynb  07_Pipeline_Building.ipynb  08_Data_Storage.ipynb  08_Demo.ipynb  09_Database_Population.ipynb  10_OCR_Experiment.ipynb  11_OCR_Analysis.ipynb  12_BPE.ipynb  13_Crude_Classification.ipynb  15_model_predictions.ipynb  16_classification_stats.ipynb
runs/Apr29_21-02-15_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1777489335.jan-ThinkPad-T16-Gen-3.128305.0  events.out.tfevents.1777489667.jan-ThinkPad-T16-Gen-3.128305.1
runs/Apr29_21-12-49_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1777489969.jan-ThinkPad-T16-Gen-3.129746.0
runs/Apr29_21-13-57_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1777490037.jan-ThinkPad-T16-Gen-3.129962.0
runs/May06_22-27-51_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1778099271.jan-ThinkPad-T16-Gen-3.585285.0
runs/May14_22-04-08_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1778789048.jan-ThinkPad-T16-Gen-3.617300.0
runs/May16_19-31-42_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1778952702.jan-ThinkPad-T16-Gen-3.1101650.0
runs/May24_22-42-37_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1779655357.jan-ThinkPad-T16-Gen-3.44782.0
runs/May26_02-24-23_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1779755063.jan-ThinkPad-T16-Gen-3.154608.0
runs/May27_00-48-33_jan-ThinkPad-T16-Gen-3/: events.out.tfevents.1779835713.jan-ThinkPad-T16-Gen-3.502385.0
scripts/: classification_gui.py  generate_anons.py  generate_lauts.py  generate_xys.py  ocr_pred_pipeline.py  pred_pipeline.py  produce_dataset.py  sammlung_gui.py  training.py
tests/: test_data.py
zettelsortierung/: ClassificationGUI.py  DataBase.py  DataModel.py  DataTypes.py  Datatypes.py  FeatureExtraction.py  ImageAnnotation.py  OCR.py  OCRPreprocessing.py  RegionDetection.py  Sammlungen.py  Transformation.py  Visualisation.py  WritingDetection.py  Zettelwerk.py  __init__.py
zettelsortierung/db/: __init__.py  database.py  models.py
zettelsortierung/nn/: __init__.py  config.py
zettelsortierung/nn/datasets/: base.py  parquet_dataset.py  pillist_dataset.py  sixty_samples.py  transforms.py
zettelsortierung/nn/models/: base.py  mobilenet.py
zettelsortierung/nn/training/: metrics.py  trainer.py
