[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "Zettelsortierung"
version = "0.0.1"
description = "Sortierung des dem Westf\u00e4lischen W\u00f6rterbuch zugrundeliegenden Zettelarchivs."
authors = [
  { name = "Jan Raring" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "mkdocs",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "pytest",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "torch (==2.7.1+xpu)",
    "torchvision (==0.22.1+xpu)",
    "torchaudio (==2.7.1+xpu)",
    "regex (>=2026.1.15,<2027.0.0)",
    "transformers (>=5.1.0,<6.0.0)",
    "addict (>=2.4.0,<3.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "paddleocr (>=3.4.0,<4.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openvino (>=2025.4.1,<2026.0.0)",
    "paddleocr-convert (>=0.1.0,<0.2.0)",
    "pyarrow (>=23.0.0,<24.0.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "nicegui (>=3.8.0,<4.0.0)",
    "nest-asyncio (>=1.6.0,<2.0.0)",
    "black (>=26.3.0,<27.0.0)",
]
requires-python = ">=3.12.0,<4.0"

[project.scripts]
gui = "scripts.classification_gui:main"

[tool.ruff]
line-length = 99
src = ["Zettelsortierung"]
include = ["pyproject.toml", "Zettelsortierung/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["Zettelsortierung"]
force-sort-within-sections = true


[[tool.poetry.source]]
name = "xpu"
url = "https://download.pytorch.org/whl/xpu"
priority = "supplemental"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

